--- a/style copy.css
+++ b/style copy.css
@@ -13,7 +13,7 @@ body {
 	text-align: center;
 	}
 	
-	form h1,form p,form h2 {
+	form h1,form p,form h2,form h3 {
 	color: black;
 	font-weight: 500;
 	}
